--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div>
           <details>
             <summary>A detail's summary</summary>
-            <p>Open by default because of the open attribute!</p>
+            <p>Can be open by default with the open attribute</p>
           </details>
         </div>
         <div>
